Add conversation bubbles in conversation view

--- a/Messages/Main.storyboard
+++ b/Messages/Main.storyboard
@@ -73,7 +73,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Contacts" id="uWu-CZ-KVg">
                         <barButtonItem key="backBarButtonItem" title="Back" id="FrJ-2k-ayf"/>
-                        <barButtonItem key="rightBarButtonItem" title="Continue" style="plain" id="qec-AX-QlI">
+                        <barButtonItem key="rightBarButtonItem" title="Continue" id="qec-AX-QlI">
                             <connections>
                                 <segue destination="PqS-ba-pNX" kind="push" id="P4Y-2v-GD0"/>
                             </connections>
@@ -108,12 +108,12 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="bzD-Cb-0lU">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="bzD-Cb-0lU">
                                 <rect key="frame" x="0.0" y="-5" width="320" height="509"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="conversationCell" id="XT8-je-SGu">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="conversationCell" id="XT8-je-SGu" customClass="ConversationViewTableCell">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XT8-je-SGu" id="WqM-Wm-oaS">
@@ -167,7 +167,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="hgY-dI-kcb">
-                        <barButtonItem key="rightBarButtonItem" title="Add" style="plain" id="tPA-sa-Lvw"/>
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="tPA-sa-Lvw"/>
                     </navigationItem>
                     <connections>
                         <outlet property="keyboardHeight" destination="I8O-Xk-byv" id="GQy-Jw-JAA"/>
